2007-08-17  Hubert Figuiere  <hub@figuiere.net>

	* configure.ac: add AC_CONFIG_MACRO_DIR to configure.
